--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="yellow">
+  <body class="green">
     <div id="app">
       <header>
         <img src="./assets/logo.svg" alt="Logo da Copa [NLW]" />
